feat(project): Add milestone feedback and application updates
Adds FeedbackResponse, MilestoneFeedback entity and repository.
Updates project application repository and service.
Adds milestone rejection functionality.